add example swagger
